--- a/Portfolio-remake.html
+++ b/Portfolio-remake.html
@@ -18,7 +18,7 @@
 				<label for="name_input">Введите имя</label>
 				<input id= "name_input" type="text" name="name" required="required" />
 				<label for="tel">Введите номер</label>
-				<input id="tel" type="tel" name="tel"  required="required" pattern="\+\d-\d\d\d-\d\d\d-\d\d\d\d" placeholder="+7(XXX)XXX-XX-XX"/>
+				<input id="tel" type="tel" name="tel"  required="required" pattern="\+7\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" placeholder="+7(XXX)XXX-XX-XX"/>
 			<input class="post_input" type="submit" value="Отправить" />
 				</form>
 	</div>
