--- a/Portfolio-remake.html
+++ b/Portfolio-remake.html
@@ -93,10 +93,10 @@
 		<div class="my-examples__headline fixed-container">
 			<a class="scrolling-box" id="job"></a>
 			<h1>Примеры моих работ</h1>
-			<!--<div class="arrows">
+			<div class="arrows">
 				<button class="next_button"></button>
 				<button class="back_button"></button>
-			</div>-->
+			</div>
 				<div class="my-examples__slick flex-container">
 					<div class="my-examples__headline_works">	
 						<img src="img/5.png" alt="psychology site">
